# github-actions-sandbox

./: .gitignore  README.md  generator.sh  run_ci.txt
.github/workflows/: branch_dependent_step.yaml  doc.yaml  dynamic_matrix.yaml  macOS.yaml  multi_step_job.yaml  on_pr.yaml  on_pr_and_push.yaml
sw/docs/: Doxyfile
sw/src/: CMakeLists.txt  main.cpp
sw/src/include/: foo.hpp
